2008-07-17  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php,
	godmode/reporting/map_builder.php: Check if all_agents were set to
	avoid warning on foreach.

	* include/functions_db.php: Fixed typo in return_status_layout().
	Return false on get_db_all_rows_sql().

	* include/functions_visual_map.php: Check layouts_data to avoid
	warning on foreach. Removed ugly comments.

2008-07-17  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Removed debug output to check use of
	deprecated function. Please don't add message like this since there
	are many people who use Pandora trunk and may find strange messages
	like that.

	* operation/agentes/networkmap.php: Removed warning message if file
	doesn't exists on checking cache system.

2008-07-17  Esteban Sanchez  <estebans@artica.es>

	* include/functions.php: Minimal style correction.

	* include/functions_db.php: Check sql_cache with empty() to avoid
	notices.

	* operation/agentes/status_monitor.php: Tab style correction.

	* general/logon_ok.php: Added missing field to SQL sentence which was
	causing PHP notices.

2008-07-15  Esteban Sanchez  <estebans@artica.es>

	* ChangeLog: Fixed some indentation and lines length issues. Fixed
	also some filepaths.

	* include/functions_db.php: Tab and blankspaces correction. Limit the
	query to one result in get_db_value() and get_db_row().

2008-07-13  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* pandora_console/general/logon_ok.php: Made the query use sprintf
	(for security purposes).
	
	* include/functions_db.php: Made all the database queries relying on a
	single query function for simpler management. Also made sure that no
	functions returned NULL because NULL is a valid database value. Also
	made a simple query cache array so that duplicate queries to generate
	a single page won't be repeated (ACL queries). Also updated some other
	queries and functions (see the diff) and removed some old code.
